# Self-Introduce

IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/: .gitignore  PRD.md  README.md  install.sh  mosquitto.conf  package.json
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/.claude/: CLAUDE.md  settings.local.json
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/broker/: CMakeLists.txt
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/broker/include/: connection_table.h  connection_table_manager.h  core_helpers.h  edge_helpers.h  edge_upstream.h  message.h  mqtt_json.h  publisher_helpers.h  uuid.h
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/broker/src/common/: connection_table_manager.cpp  mqtt_json.cpp
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/broker/src/core/: main.cpp
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/broker/src/edge/: main.cpp
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/broker/src/publisher/: main.cpp
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/broker/test/: test_core_logic.cpp  test_edge_logic.cpp  test_json.cpp  test_publisher_logic.cpp
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/client/: DEVLOG.md  README.md  package-lock.json  package.json
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/client/src/: App.css  App.jsx
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/demo/: PRESENTATION_HM_RPI1.md  PUB_SIM.md  REJOIN_SCENARIO.txt  local-demo.env.example  local-role.sh  presentation-hm-rpi1.sh
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/publisher_client/: index.html  package-lock.json  package.json  vite.config.js
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/publisher_client/src/: App.css  App.jsx  index.css
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/test/: BROKER_INTEGRATION.md  README.md  TESTING.md  test_pub.sh
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/test/client/: README.md
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/test/core/: 01_bootstrap.sh  02_lwt.sh  03_node_offline.sh  04_event_dedup.sh  05_ct_sync.sh  06_core_switch.sh  07_node_recovery.sh  08_election.sh  09_election_distributed.sh  10_event_e2e.sh  11_relay_ack.sh  12_core_rejoin.sh  README.md
IoT_Midterm_Availability_MQTT-dev/IoT_Midterm_Availability_MQTT-dev/test/edge/: 01_ping_pong.sh  02_lwt.sh  03_core_switch.sh  04_ct_active_core_change.sh  05_rtt_relay.sh  06_store_and_forward.sh  07_stable_node_id.sh  08_failover_rejoin.sh  08_peer_relay.sh  README.md
solar_mobile_blockchain-main/solar_mobile_blockchain-main/: README.md
solar_mobile_blockchain-main/solar_mobile_blockchain-main/Full Node/: README.md
solar_mobile_blockchain-main/solar_mobile_blockchain-main/Hardware/: README.md
solar_mobile_blockchain-main/solar_mobile_blockchain-main/Proxy node/: README.md
(+115 files in other folders)
